# stm32h7x3-hal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  memory.x
clock_calc_macro/: Cargo.toml
clock_calc_macro/src/: lib.rs
compile_time_calculations/: Cargo.toml
compile_time_calculations/src/: lib.rs
examples/: adc.rs  blinky_led.rs  bme280_i2c.rs  hello_world.rs  led.rs  serial.rs  watchdog.rs
src/: adc.rs  delay.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  time.rs  watchdog.rs
