[package]
name = "stm32h7x3-hal"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32H7x3 family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = "0.5"
nb = "0.1"
clock_calc_macro = { path = "./clock_calc_macro"}

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.stm32h7]
version = "0.6"
features = ["stm32h7x3", "rt"]

[dependencies.void]
default-features = false
version = "1.0"

[dependencies.cast]
default-features = false
version = "0.2"