[package]
name = "stm32h7x3-hal"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>", "Jan Adä <jan.adae@outlook.de>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32H7x3 family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"


[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6.8"
nb = "0.1"
compile_time_calculations = { path = "./compile_time_calculations"}

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]

[dependencies.stm32h7]
version = "0.7.0"
path = "../stm32-rs/stm32h7"
features = ["stm32h7x3", "rt"]

[dependencies.void]
default-features = false
version = "1.0"

[dependencies.cast]
default-features = false
version = "0.2"

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
panic-itm = "0.4.1"
cortex-m-semihosting = "0.3.3"
bme280 = "0.1.1"

[features]
rev_v = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
